# mcp-gpu-server

./: README.md  pyproject.toml
src/mcp_gpu_server/: server.py
tests/: test_gpu.py
