[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gpu-server"
version = "0.1.0"
description = "MCP server for GPU monitoring: utilization, VRAM, temperature via nvidia-smi / NVML"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "gpu", "nvidia", "cuda", "vram", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "pynvml>=11.0.0",
]

[project.scripts]
mcp-gpu-server = "mcp_gpu_server.server:main"

[project.urls]
Homepage = "https://github.com/mesutoezdil/mcp-gpu-server"
Repository = "https://github.com/mesutoezdil/mcp-gpu-server"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gpu_server"]
